# average-atom-toolkit

./: .gitignore  CMakeLists.txt  README.md
average-atom-toolkit/: CMakeLists.txt  configuration.h.in  eos.h
average-atom-toolkit/atom/: CMakeLists.txt  base.cxx  base.h  semiclassic.h  thomas-fermi.h
average-atom-toolkit/atom/semiclassic/: CMakeLists.txt  electron-density.cxx  electron-states.cxx  energy-level.cxx  interface.cxx  potential.cxx  td-functions.cxx  wave-function.cxx
average-atom-toolkit/atom/thomas-fermi/: CMakeLists.txt  interface.cxx  potential.cxx  table-gen.cxx
average-atom-toolkit/model/: model.h  thomas-fermi.h
average-atom-toolkit/multithreading/: CMakeLists.txt  thread-pool.h
average-atom-toolkit/semiclassic/: CMakeLists.txt  atom.h
average-atom-toolkit/semiclassic/atom/: CMakeLists.txt  action.cxx  atom.cxx  electron-density.cxx  electron-states.cxx  energy-levels.cxx  potential.cxx  return-points.cxx  rotate-points.cxx  wave-function.cxx
average-atom-toolkit/thermodynamic-function/: chemical-potential.h  free-energy.h  pressure.h  thermodynamic-function.h
average-atom-toolkit/thomas-fermi/: CMakeLists.txt  atom.h
average-atom-toolkit/thomas-fermi/atom/: CMakeLists.txt  action.cxx  action.h  atom.cxx  electron-density.cxx  electron-density.h  electron-states.cxx  electron-states.h  energy-level.cxx  energy-level.h  energy-level.h.in  potential.cxx  potential.h  rotate-points.cxx  rotate-points.h  tau.cxx  tau.h
average-atom-toolkit/thomas-fermi/eos/: CMakeLists.txt  chemical-potential.cxx  chemical-potential.h  chemical-potential.h.in  free-energy.cxx  free-energy.h  free-energy.h.in  table-gen.cxx
average-atom-toolkit/thomas-fermi/quantum-exchange/: CMakeLists.txt  potential.cxx  potential.h  table-gen.cxx  table.h
average-atom-toolkit/thomas-fermi/thermodynamics/: CMakeLists.txt  chemical-potential.cxx  chemical-potential.h  free-energy.cxx  free-energy.h  qe-chemical-potential.cxx  qe-chemical-potential.h  qe-free-energy.cxx  qe-free-energy.h  shell-chemical-potential.cxx  shell-chemical-potential.h  shell-free-energy.cxx  shell-free-energy.h  table-gen.cxx
average-atom-toolkit/transport/: CMakeLists.txt  Kfunction.cxx  Kfunction.h  bessel-spherical.h  cross-section.cxx  cross-section.h  delta.cxx  delta.h
average-atom-toolkit/transport/potential/: CMakeLists.txt  base.cxx  base.h  debye.cxx  debye.h  hard-sphere.cxx  hard-sphere.h  polarization.cxx  polarization.h  square-well.cxx  square-well.h  tabular.cxx  tabular.h
average-atom-toolkit/util/: CMakeLists.txt  quantity-array.h  quantity.h  unit.h
average-atom-toolkit/util/specfunc/: CMakeLists.txt
average-atom-tools/thomas-fermi/atom/: CMakeLists.txt  action.cxx  action.h  atom.cxx  electron-density.cxx  electron-density.h  electron-states.cxx  electron-states.h  energy-level.cxx  energy-level.h  potential.cxx  potential.h  rotate-points.cxx  rotate-points.h  table-gen.cxx  table.h
average-atom-tools/thomas-fermi/thermodynamics/: CMakeLists.txt  chemical-potential.cxx  chemical-potential.h  free-energy.cxx  free-energy.h  qe-free-energy.cxx  qe-free-energy.h  shell-chemical-potential.cxx  shell-chemical-potential.h  shell-free-energy.cxx  shell-free-energy.h  table  table-gen.cxx
numeric-toolkit/: CMakeLists.txt
numeric-toolkit/ODE/: CMakeLists.txt  solver.h  types.h
numeric-toolkit/ODE/stepper/: CMakeLists.txt  PD5.h  PD853.h
numeric-toolkit/interpolation/: CMakeLists.txt  base.cxx  base.h  linear.cxx  linear.h  polynomial.cxx  polynomial.h  spline.cxx  spline.h
numeric-toolkit/specfunc/: CMakeLists.txt
numeric-toolkit/specfunc/bessel/: CMakeLists.txt  I0.h  I1.h  In.h  Inu.h  J0.h  J1.h  Jn.h  Jnu.h  K0.h  K1.h  Kn.h  Knu.h  Y0.h  Y1.h  Yn.h  Ynu.h
numeric-toolkit/specfunc/fermi-dirac/: CMakeLists.txt  Yfunction.h  complete.h  incomplete.h
numeric-toolkit/specfunc/gamma/: double-fact.h
numeric-tools/specfunc/fermi-dirac/: CMakeLists.txt  Yfunction.h  complete.h  incomplete.h
python/: CMakeLists.txt
python/pyaatk/: CMakeLists.txt
python/pyaatk/TF/: CMakeLists.txt  EoS.py  __init__.py
python/pyaatk/atom/: CMakeLists.txt  __init__.py  _pyaatk_atom.cxx
python/pyaatk/multithreading/: CMakeLists.txt  __init__.py  _multithreading.cxx  _pyaatk_multithreading.cxx
python/pyaatk/semiclassic/: CMakeLists.txt  __init-multithreading__.py  __init-single-thread__.py  __init__.py  _atom.cxx  _pyaatk_semiclassic.cxx
python/pyaatk/thomas_fermi/: Atom.py  CMakeLists.txt
python/pyaatk/transport/: CMakeLists.txt  __init__.py  _cross-section.cxx  _pyaatk_transport.cxx
python/pynumtk/: CMakeLists.txt
python/pynumtk/interpolation/: CMakeLists.txt  _PyInterpolation.cxx  __init__.py
python/pynumtk/specfunc/: CMakeLists.txt
tests/: CMakeLists.txt  FDtest.cxx  ODE_PD5test.cxx  ODE_PD853test.cxx  TFQE_FreeEnergy.cxx  TFQE_chemPot.cxx  TFSH_FreeEnergy.cxx  TFSH_chemPot.cxx  TF_Atom.cxx  TF_EnergyLevel.cxx  TF_FreeEnergy.cxx  TF_PotQE.cxx  TF_Potential.cxx  TF_chemPot.cxx  TF_eStates.cxx  Yfunction.cxx  bessel_test.cxx  eos.cxx  quantity-array.cxx  quantity.cxx  self_consistent.cxx  tfqx_chemPot.cxx  tfsh_density.cxx  tfsh_wave_function.cxx  units.cxx
tests/cxx/: CMakeLists.txt
tests/cxx/atom/: CMakeLists.txt  self-consistent-atom.cxx
tests/cxx/semiclassic/: CMakeLists.txt  self-consistent.cxx
tests/cxx/thomas-fermi/: CMakeLists.txt  atom.cxx  chemPot-qx.cxx  chemPot-shell.cxx  freeEnergy-derivatives.cxx  freeEnergy-qx.cxx  freeEnergy-shell.cxx  potential-qx.cxx
tests/python/: CMakeLists.txt  chem-potential-tf-qx.py  chem-potential-tf-shell.py  chem-potential-tf.py  electron-density-tf.py  energy-level-tf.py  free-energy-tf-qx.py  free-energy-tf-shell.py  free-energy-tf.py  interpolation-test.py  potential-tf.py  semiclassic-selfconsistent.py
tests/python/semiclassic/: selfconsistent.py
tests/python/thomas-fermi/: chem-potential-qx.py  chem-potential.py  electron-density.py  entropy-tf.py  free-energy-qx.py  inner-energy-tf.py  pressure-tf.py
tests/python/transport/: conductivity-atom.py  cross-section-tf.py  cross-section.py  potentials.py  (+2 more)
(+236 files in other folders)
