install(
    FILES chem-potential-tf.py
    	  chem-potential-tf-shell.py
    	  chem-potential-tf-qx.py
    	  electron-density-tf.py
    	  energy-level-tf.py
    	  fermi-dirac-test.py
    	  free-energy-tf-qx.py
    	  free-energy-tf-shell.py
    	  free-energy-tf.py
    	  interpolation-test.py
    	  potential-tf.py
          semiclassic-selfconsistent.py
    DESTINATION tests/python
)